@@ -1,9 +1,10 @@
-2021-12-01
+2021-12-02
 
         * Version 2.0.0 released
         ========================
 
-        Add GCOMSelection::fpmtflag() method (#3917)
+	Add GCOMSelection::fpmtflag(), GCOMSelection::use_d1() and 
+          GCOMSelection::use_d2() methods (#3917)
         Add GCOMModelDRBPhibarBins class (#3913)
         Compute spectral model gradients for negative factor values
         Add likelihood fit event selection hook (#3912)
